# keep-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  TASKS.md  main.py  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
docs/: memory-overview.md  recall-without-tags-test.md  roadmap.md  sqlite-utils-guide.md  tool-descriptions.md  zettelkasten-core-concepts.md
scripts/: check_tool_descriptions.py  debug_query.py  export.py  migrate.py  seed_cards.py  smoke_stdio_client.py  test_recall_no_tags.py  view_audit.py
src/keep_mcp/: __init__.py  application.py  cli.py  fastmcp_server.py  identifiers.py  main.py  telemetry.py
src/keep_mcp/adapters/: __init__.py  errors.py
src/keep_mcp/models/: __init__.py  tool_io.py
src/keep_mcp/services/: __init__.py  audit.py  card_lifecycle.py  cards.py  duplicate.py  export.py  ranking.py
src/keep_mcp/storage/: __init__.py  audit_repository.py  card_repository.py  connection.py  migrations.py  repository.py  revision_repository.py  tag_repository.py
src/keep_mcp/utils/: identifiers.py  tags.py  time.py
tests/: conftest.py
tests/contract/: test_fastmcp_tools.py  test_memory_add_card.py  test_memory_export.py  test_memory_manage.py  test_memory_recall.py
tests/integration/: test_duplicate_merge.py  test_manage_card.py  test_recall_flow.py  test_recall_no_tags.py
tests/perf/: test_recall_perf.py
tests/unit/: test_adapter_errors.py  test_adapter_tools.py  test_cli.py  test_duplicate_detection.py  test_export_service.py  test_fastmcp_server.py  test_ranking.py  test_repository.py
(+12 files in other folders)
