[project]
name = "keep-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.16.0",
    "pydantic>=2.8.0",
    "scikit-learn>=1.7.2",
    "sqlite-utils>=3.38",
    "structlog>=25.4.0",
    "ulid-py>=1.1.0",
]

[project.scripts]
keep-mcp = "keep_mcp.cli:main"

[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
